testdata/golden/sema/invalid/concurrency/nosend_in_spawn.sg
// ERROR: @nosend type cannot be sent to spawn

@nosend
pub type FileHandle = {
    fd: int,
};

async fn process_fd(fd: int) -> int {
    return fd + 1;
}

pub fn spawn_with_nosend() -> Task<int> {
    let handle: FileHandle = { fd: 42 };
    // ERROR SEM3086: cannot send 'handle' of @nosend type 'FileHandle' to spawn; use @local spawn
    return spawn async {
        return handle.fd;
    };
}
